--- a/illun1.html
+++ b/illun1.html
@@ -23,7 +23,7 @@
                 <a href="" class="label">
                     travel vlog
                 </a>
-                <a href="file:///D:/yuntech/protofolio/%E7%B6%B2%E7%AB%99%E7%94%A8/porfilio/cover.html" class="labeldel">
+                <a href="missdin.github.io/DEL-home-page/cover.html" class="labeldel">
                     DEL
                 </a>
             </div>
