--- a/illun6.html
+++ b/illun6.html
@@ -4,7 +4,7 @@
             <meta name="viewport" content ="width=device-width,initial-scale=1.0"/>
             <meta charset="utf-8"/>
             <title>DEL works</title>
-            <link rel="stylesheet"type="text/css"href="vdn7.css"/>
+            <link rel="stylesheet"type="text/css"href="illun6.css"/>
         </head>
         <body>
             <div class="title">
@@ -23,9 +23,16 @@
                 <a href="https://missdin.github.io/DEL-travel-vlog/vlog.html" class="label">
                     travel vlog
                 </a>
-                <a href="https://missdin.github.io/DEL-home-page/cover.html" class="labeldel">
-                    DEL
-                </a>
+                <div class="pc">
+                    <a href="https://missdin.github.io/DEL-home-page/cover.html" class="labeldel">
+                        DEL
+                    </a>
+                </div>
+                <div class="mobile">
+                    <a href="https://missdin.github.io/DEL-home-page/cover.html" class="labeldel">
+                        D<br>E<br>L
+                    </a>
+                </div>
             </div>
             <div class="body">
                 <div class="container">
