--- a/illun1.html
+++ b/illun1.html
@@ -4,7 +4,7 @@
             <meta name="viewport" content ="width=device-width,initial-scale=1.0"/>
             <meta charset="utf-8"/>
             <title>DEL works</title>
-            <link rel="stylesheet"type="text/css"href="ilun1.css"/>
+            <link rel="stylesheet"type="text/css"href="illun1.css"/>
         </head>
         <body>
             <div class="title">
